Fixed score columns width on narrower screen + added PSD files

--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ p {
 
 #score-cols {
   display: flex;
-  width: 85rem;
+  max-width: 85rem;
   margin: 0 auto;
 }
 
